k8s/azure/loan-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loan-service
  labels:
    app: loan-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: loan-service
  template:
    metadata:
      labels:
        app: loan-service
    spec:
      imagePullSecrets:
        - name: acr-secret
      containers:
        - name: loan-service
          image: libraryhubackr.azurecr.io/loan-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8001
          readinessProbe:
            httpGet:
              path: /health
              port: 8001
            initialDelaySeconds: 15
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 8001
            initialDelaySeconds: 40
            periodSeconds: 15
---
apiVersion: v1
kind: Service
metadata:
  name: loan-service
spec:
  selector:
    app: loan-service
  ports:
    - port: 8001
      targetPort: 8001
